# added code for redis connection to baadal vm and user login signup logic, added convorsation window component

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,7 +6,7 @@
     flex: 1 1 auto;
   }
 .router-wrapper{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
 }
