# added offline users and converstion-chat workflow

--- a/src/app/convo/convo.component.html
+++ b/src/app/convo/convo.component.html
@@ -1,6 +1,6 @@
 <div style="padding: 3em;">
-    <span style="display: flex;flex-direction: column;">
-        <mat-toolbar color="accent">
+    <span style="display: flex;flex-direction: column;border-radius: 15px;box-shadow: 0px 0px 15px 0.1px;padding: 5px;">
+        <mat-toolbar color="accent" style="border-radius: 15px 15px 0 0;">
             <span style="cursor: pointer;">
                 <mat-icon>person</mat-icon>&nbsp;
                 <span>{{user}}</span>
