--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div style="padding: 5%;">
-    <mat-card style="min-width: 400px;">
+    <mat-card style="min-width: 400px;border-radius: 15px;box-shadow: 0px 0px 15px 0.1px;padding: 25px;">
         <mat-card-header style="justify-content: center;">
             <mat-card-title>{{isLogin?"Login":"Sign up"}}</mat-card-title>
         </mat-card-header>
