--- a/src/app/texts/texts.component.html
+++ b/src/app/texts/texts.component.html
@@ -1,6 +1,6 @@
 <span style="display: flex;flex-direction: column;">
         <div  *ngFor="let c of con" style="padding: 2px 0 0 2px;"   [ngClass]="[c.my === 1 ? 'align-end' : 'align-start']">
             <div class="box" [ngClass]="[c.my === 1 ? 'my-border' : 'reply-border']" 
-            style="font-size: 20px;border: 4px blueviolet solid;padding: 0 10px 0 10px;">{{c.msg}}</div>
+            style="font-size: 20px;border: 2px #ff4081 solid;padding: 0 10px 0 10px;">{{c.msg}}</div>
         </div>
 </span>
