--- a/src/app/texts/texts.component.scss
+++ b/src/app/texts/texts.component.scss
@@ -7,15 +7,20 @@
 }
 
 .my-border{
-    border-radius: 10px 0 0 10px;
+    border-radius: 10px 10px 0 10px;
 }
 
 .reply-border{
-    border-radius: 0 10px 10px 0;
+    border-radius: 10px 10px 10px 0;
 }
 
 .box{
     overflow-wrap: break-word;
     word-break: break-all;
     // max-width: 60%;
+}
+
+.delivery-status-icons{
+    transform: scale(0.5);
+    transform-origin: bottom;
 }
